# OpenGLWithCmake

./: .gitignore  CMakeLists.txt
01 - Hello Triangle/: CMakeLists.txt
01 - hello triangle/: CMakeLists.txt
02 - shaders/: CMakeLists.txt  build.bat  build.sh
02 - shaders/src/: main.cpp
03 - Textures/: CMakeLists.txt  build.sh
03 - Textures/shaders/: shader.frag  shader.vert
03 - Textures/src/: main.cpp
03 - textures/: CMakeLists.txt
04 - Transformations/: CMakeLists.txt
04 - Transformations/src/: main.cpp
dependencies/glad/src/: glad.c
glad/src/: glad.c
src/: main.cpp
